--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/edited photo.png" alt="Wariebi Adeola" style="width:200px; border-radius:50%;">
+						<img src="images/edited-photo.png" alt="Wariebi Adeola" style="width:200px; border-radius:50%;">
 						<h1>Wariebi Adeola's<br />
 						Portfolio</h1>
 						<p>Driving Business Growth Through Data-Driven Insights, Strategic Recommendations, and Informed Decision-Making</p>
